@@ -2,5 +2,14 @@
 <install>
     <folders>${ROOT_CONF}/logrotate.d</folders>
     <copy_config>${ROOT_CONF}/logrotate.d/imscp</copy_config>
-    <copy_config>${ROOT_CONF}/logrotate.d/rsyslog</copy_config>
+    <!--
+        The rsyslog LOGROTATE(8) configuration file is copied only when the
+        'if' expression evaluate to TRUE. Otherwise, it is removed.
+    -->
+    <copy_config if="-x '/usr/sbin/rsyslogd'">${ROOT_CONF}/logrotate.d/rsyslog</copy_config>
+    <!--
+        The syslog-ng LOGROTATE(8) configuration file is copied only when the
+        'if' expression evaluate to TRUE. Otherwise, it is removed.
+    -->
+    <copy_config if="-x '/usr/sbin/syslog-ng'">${ROOT_CONF}/logrotate.d/syslog-ng</copy_config>
 </install>
