@@ -1,4 +1,4 @@
-# LOGROTATE(8) configuration file for RSYSLOGD(8) - auto-generated by i-MSCP
+# LOGROTATE(8) configuration file for SYSLOG-NG(8) - auto-generated by i-MSCP
 #     DO NOT EDIT THIS FILE BY HAND -- YOUR CHANGES WILL BE OVERWRITTEN
 
 /var/log/mail.info
@@ -15,7 +15,7 @@
     compress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        invoke-rc.d --quiet syslog-ng reload > /dev/null
     endscript
 }
 
@@ -37,6 +37,6 @@
     delaycompress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        invoke-rc.d --quiet syslog-ng reload > /dev/null
     endscript
 }
