@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<install>
+    <folders>${ROOT_CONF}/logrotate.d</folders>
+    <copy_config>${ROOT_CONF}/logrotate.d/imscp</copy_config>
+    <!--
+        The rsyslog LOGROTATE(8) configuration file is copied only when the
+        'if' expression evaluate to TRUE. Otherwise, it is removed if it
+        exists, unless the 'kept' expression evaluate to TRUE.
+    -->
+    <copy_config if="'${DISTRO_CODENAME}' ne 'trusty' &amp;&amp; -x '/usr/sbin/rsyslogd'" kept="-x '/usr/sbin/rsyslogd">
+        ${SYSTEM_ETC_DIR}/logrotate.d/rsyslog
+    </copy_config>
+    <!--
+        The rsyslog LOGROTATE(8) configuration file is copied only when the
+        'if' expression evaluate to TRUE. Otherwise, it is removed if it
+        exists, unless the 'kept' expression evaluate to TRUE.
+    -->
+    <copy_config if="'${DISTRO_CODENAME}' eq 'trusty' &amp;&amp; -x '/usr/sbin/rsyslogd'" as="rsyslog" kept="-x '/usr/sbin/rsyslogd">
+        ${ROOT_CONF}/logrotate.d/rsyslog.14.04
+    </copy_config>
+    <!--
+        The syslog-ng LOGROTATE(8) configuration file is copied only when the
+        'if' expression evaluate to TRUE. Otherwise, it is removed.
+    -->
+    <copy_config if="-x '/usr/sbin/syslog-ng'">${ROOT_CONF}/logrotate.d/syslog-ng</copy_config>
+</install>
