@@ -1,6 +1,10 @@
 # LOGROTATE(8) configuration file for RSYSLOGD(8) - auto-generated by i-MSCP
 #     DO NOT EDIT THIS FILE BY HAND -- YOUR CHANGES WILL BE OVERWRITTEN
 
+# Use the syslog group by default, since this is the owning group of /var/log.
+# This is needed when we run 'logrotate -f /etc/logrotate.d/rsyslog' manually
+su root syslog
+
 /var/log/mail.info
 /var/log/mail.warn
 /var/log/mail.err
