@@ -1,10 +1,10 @@
 # LOGROTATE(8) configuration file for RSYSLOGD(8) - auto-generated by i-MSCP
 #     DO NOT EDIT THIS FILE BY HAND -- YOUR CHANGES WILL BE OVERWRITTEN
 
-/var/log/mail.info
-/var/log/mail.warn
-/var/log/mail.err
-/var/log/mail.log
+# Use the syslog group by default, since this is the owning group of /var/log.
+# This is needed when we run 'logrotate -f /etc/logrotate.d/rsyslog' manually
+su root syslog
+
 /var/log/syslog
 {
     rotate 7
@@ -13,9 +13,25 @@
     notifempty
     delaycompress
     compress
+    postrotate
+        reload rsyslog > /dev/null 2>&1 || true
+    endscript
+}
+
+/var/log/mail.info
+/var/log/mail.warn
+/var/log/mail.err
+/var/log/mail.log
+{
+    rotate 7
+    daily
+    missingok
+    notifempty
+    compress
+    delaycompress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        reload rsyslog > /dev/null 2>&1 || true
     endscript
 }
 
@@ -37,6 +53,6 @@
     delaycompress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        reload rsyslog > /dev/null 2>&1 || true
     endscript
 }
