@@ -1,5 +1,9 @@
-# LOGROTATE(8) configuration file for RSYSLOGD(8) - auto-generated by i-MSCP
+# LOGROTATE(8) configuration file for SYSLOG-NG(8) - auto-generated by i-MSCP
 #     DO NOT EDIT THIS FILE BY HAND -- YOUR CHANGES WILL BE OVERWRITTEN
+
+# Use the syslog group by default, since this is the owning group of /var/log.
+# This is needed when we run 'logrotate -f /etc/logrotate.d/syslog-ng' manually
+su root syslog
 
 /var/log/mail.info
 /var/log/mail.warn
@@ -15,7 +19,7 @@
     compress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        invoke-rc.d --quiet syslog-ng reload > /dev/null
     endscript
 }
 
@@ -37,6 +41,6 @@
     delaycompress
     sharedscripts
     postrotate
-        invoke-rc.d --quiet rsyslog rotate > /dev/null
+        invoke-rc.d --quiet syslog-ng reload > /dev/null
     endscript
 }
