@@ -5,9 +5,12 @@ Git 1.5.x
 ------------------------------------------------------------------------------------------------------------------------
 
 CONFIG
+    Added: Missing LOGROTATE(8) for SYSLOG-NG(8) which can be installed on some system in place of RSYSLOGD(8) (All distributions)
+    Added: Specific LOGROTATE(8) configuration file for rsyslog (Ubuntu 14.04/Trusty Thar) (Backported from 1.6.x branch)
     Fixed: Bad value for X-Forward-* headers (Proxy feature / Apache2 ssl vhosts)
 
 YOUTRACK
+    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
     IP-1785 Exception in circular email feature (admin interface)
     IP-1786 Customer assignment (to reseller) not showing all clients
 
